--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <select name="drop" id="drop">
                     <!-- <option value=""></option> -->
                 </select>
-                <button id="but"><img src="play.png" alt="">Listen</button>
+                <button id="but"><img src="assets/play.png" alt="">Listen</button>
             </div>
         </div>
     </div>
